# django-auto-prefetch

./: .coveragerc  .flake8  .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: SECURITY.md
.github/workflows/: main.yml
auto_prefetch/: __init__.py
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py312-django42.txt  py312-django50.txt  py35-django22.txt  py36-django22.txt  py36-django30.txt  py36-django31.txt  py36-django32.txt  py37-django22.txt  py37-django30.txt  py37-django31.txt  py37-django32.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
src/auto_prefetch/: __init__.py
tests/: conftest.py  models.py  settings.py  test_basic.py
