[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[tool.black]
target-version = ['py37']

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --durations=20
    -ra
    --ds=tests.settings
    --cov auto_prefetch
    --cov tests
    --cov-report=term-missing:skip-covered
    --no-cov-on-fail
    --cov-fail-under=100
    """
django_find_project = false

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
