[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[tool.black]
target-version = ['py38']

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --durations=20
    -ra
    --ds=tests.settings
    --cov auto_prefetch
    --cov tests
    --cov-report=term-missing:skip-covered
    --no-cov-on-fail
    --cov-fail-under=100
    """
django_find_project = false

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
namespace_packages = false
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
