[metadata]
name = django-auto-prefetch
version = 0.0.6
description = Automatically prefetch foreign key values as needed.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Gordon Wrigley
author_email = gordon.wrigley@gmail.com
url = https://github.com/tolomea/django-auto-prefetch
project_urls =
    Changelog = https://github.com/tolomea/django-auto-prefetch/blob/master/HISTORY.rst
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Django>=2.2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
