[metadata]
name = django_auto_prefetch
version = 1.5.1
description = Automatically prefetch foreign key values as needed.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tolomea/django-auto-prefetch
author = Gordon Wrigley
author_email = gordon.wrigley@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
project_urls =
    Changelog = https://github.com/tolomea/django-auto-prefetch/blob/main/CHANGELOG.rst

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
source =
    auto_prefetch
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
